# 3d-spinning-cube

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp
